# Vellum

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Vellum.html  correcionesRouterai.md  docker-compose.yml
Alcance/: Business Case.md  DAL-developer-guide.md  Doc1 - Alcance.md  Documento 10- Infraestructura y Contenerización.md  Documento 11- CI:CD y Despliegue.md  Documento 12- Escalabilidad y Evolución Futura.md  Documento 13- Especificacion de Interfaces UI.md  Documento 2- Arquitectura de Alto Nivel (HLD).md  Documento 3- Diseño de la API.md  Documento 4- Modelo de Datos y Persistencia.md  Documento 5- Seguridad y Control de Acceso.md  Documento 6- Logging, Monitoreo y Trazabilidad.md  (+9 more)
router-ai/: .env.example  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
router-ai/app/: main.py
router-ai/app/adapters/: anthropic.py  base.py  deepseek.py  google.py  lmstudio.py  ollama.py  openai.py
router-ai/app/api/v1/: chat.py  deps.py  embed.py  health.py  router.py  stream.py
router-ai/app/core/: auth.py  circuit_breaker.py  config.py  errors.py  logging.py  rate_limit_store.py  rate_limiter.py  registry.py
router-ai/app/middleware/: auth.py  logging.py  rate_limit.py
router-ai/app/models/: common.py  request.py  response.py
router-ai/config/: rate_limits.yaml
router-ai/tests/: conftest.py  test_auth.py  test_breaker_contract.py  test_docs_auth.py  test_google_adapter.py  test_health.py  test_logging.py  test_message.py  test_rate_limiting.py  test_redis_rate_limit_store.py  test_registry.py  test_stream.py
(+117 files in other folders)
