[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "router-ai"
version = "0.2.0"
description = "Microservicio de enrutamiento unificado para múltiples proveedores LLM"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "anthropic>=0.36.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.2",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "fakeredis>=2.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
